--- a/index.html
+++ b/index.html
@@ -2,10 +2,19 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, user-scalable=no">
+		<link rel="stylesheet" href="styles/reset.css">
+		<link rel="stylesheet" type="text/css" href="styles/style.css">
 		<title>爬蟲溫濕度監視器</title>
 	</head>
 
 	<body>
-		<h3>hello world</h3>
+		<section class="section-temperature">
+			<div class="temperature">30&deg;C</div>
+		</section>
+
+		<section class="section-humidity">
+			<div class="humidity">70&percnt;</div>
+		</section>
 	</body>
 </html>
