--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, user-scalable=no">
+		<link href='https://fonts.googleapis.com/css?family=Archivo Black' rel='stylesheet'>
 		<link rel="stylesheet" href="styles/reset.css">
 		<link rel="stylesheet" type="text/css" href="styles/style.css">
+		
 		<title>爬蟲溫濕度監視器</title>
 	</head>
 
 	<body>
 		<section class="section-temperature">
-			<div class="temperature">30&deg;C</div>
+			<div class="temperature">temp 30&deg;C</div>
 		</section>
 
 		<section class="section-humidity">
