--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 	<body>
 		<section class="section-temperature">
-			<div class="temperature">Temperature 30&deg;C</div>
+			<div class="temperature">30</div>
 		</section>
 
 		<section class="section-humidity">
-			<div class="humidity">70&percnt;</div>
+			<div class="humidity">70</div>
 		</section>
 	</body>
 </html>
