--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, user-scalable=no">
 		<link rel="stylesheet" type="text/css" href="styles/reset.css">
 		<link rel="stylesheet" type="text/css" href="styles/style.css">
-		
 		<title>爬蟲溫濕度監視器</title>
 	</head>
 
 	<body>
 		<section class="section-temperature">
-			<div class="temperature">30</div>
+			<div class="temperature">99</div>
 		</section>
 
 		<section class="section-humidity">
-			<div class="humidity">70</div>
+			<div class="humidity">99</div>
 		</section>
 	</body>
+	<script src="scripts/index.js"></script>
 </html>
