--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 	<body>
 		<section class="section-temperature">
+			<iframe src="https://thingspeak.com/channels/929404/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line&update=15"></iframe>
 			<div class="temperature">99</div>
 		</section>
 
