add last updated time

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 			<div class="humidity">0</div>
 			<div id="div-rh-curve"></div>
 		</section>
+
+		<footer>Last Updated at</footer>
 	</body>
 	<script src="scripts/index.js"></script>
 </html>
