--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="styles/style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script src="https://unpkg.com/konva@4.0.18/konva.min.js"></script>
-		<title>爬蟲溫濕度監視器</title>
+		<title>Reptiles Monitor</title>
 	</head>
 
 	<body>
